--- a/chiorio-server/package.json
+++ b/chiorio-server/package.json
@@ -13,8 +13,10 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "@aternus/csv-to-xlsx": "^1.0.19",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "json2csv": "^5.0.6",
     "mongoose": "^6.0.8"
   }
 }
