--- a/chiorio-server/package.json
+++ b/chiorio-server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "json2csv": "^5.0.6",
-    "mongoose": "^6.0.8"
+    "mongoose": "^6.0.8",
+    "nodemailer": "^6.7.0"
   }
 }
